# ouch

./: .editorconfig  .gitignore  Cargo.toml  FAQ.md  Justfile  README.md  build.rs  ht.sr.git.shrimple.Ouch.json  index.md  plugins.md  rustfmt.toml  site.srht.shrimple.Ouch.flatpak
build-aux/flatpak/: devel.json  ht.sr.git.shrimple.Ouch.json  site.srht.shrimple.Ouch.json  site.srht.shrimple.ouch.json  stable.json
build-aux/rpm/: ouch.spec
pkg/flatpak/: site.srht.shrimple.ouch.json
pkg/rpm/: ouch.spec
po/: POTFILES  eo.po  fr.po  nb_NO.po  ouch.pot  pt_BR.po  template.pot
res/: ht.sr.git.shrimple.Ouch.desktop  ht.sr.git.shrimple.Ouch.metainfo.xml  site.srht.shrimple.Ouch.desktop  site.srht.shrimple.Ouch.metainfo.xml  site.srht.shrimple.ouch.desktop  site.srht.shrimple.ouch.gresource.xml  site.srht.shrimple.ouch.gschema.xml  site.srht.shrimple.ouch.metainfo.xml
src/: consts.rs  css.rs  lua.rs  main.rs  styles.css  ui.rs  window.rs
src/css/: base.css  dark.css  light.css
src/plugins/: README.md
src/plugins/usermods/: README.md  main.lua
src/plugins/vblock/: README.md  main.lua
src/ui/: about-shrimple.blp  about.blp  help-overlay.blp  oobe.blp  plugin-manager.blp  preferences.blp  window.blp
tests/plugins/: dialog.lua  hello_world.lua  print_version.lua  types.lua
