[package]
name = "ouch"
version = "0.4.0-rc.2"
edition = "2021"

[features]
devel = []
flatpak = []

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46", "v4_14"] }
url = "2.5"
webkit = { version = "0.4", package = "webkit6", features = ["v2_44"] }
