[package]
name = "ouch"
version = "0.5.0-rc.3"
edition = "2021"

[features]
devel = []
flatpak = []

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46", "v4_14"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
# Will be needed for the plugin installer in the near future (maybe?)
# sourceview = { version = "0.9", package = "sourceview5", features = ["gtk_v4_12", "v5_10"] }
url = "2.5"
webkit = { version = "0.4", package = "webkit6", features = ["v2_44"] }

[build-dependencies]
glib-build-tools = "0.20.0"
